gciphers_sources += files(
    'alphabet.vala',
    'atbash.vala',
    'caesar.vala',
    'polybius.vala',
    'multi_alphabetic.vala',
    'trithemium.vala',
    'belazo.vala',
    'vigenere.vala',
    'vertical.vala',
    'matrix.vala',
    'vigenereii.vala',
    'scrambler.vala',
    'shenon.vala',
)
