gciphers_sources += files(
    'atbash.vala',
    'caesar.vala',
    'polybius.vala',
    'trithemium.vala',
    'belazo.vala',
    'vigenere.vala',
    'vertical.vala',
    'vigenereii.vala',
    'matrix.vala',
    'playfair.vala',
    'scrambler.vala',
    'shenon.vala',
    'matrix_grid.vala',
)
